--- a/app/templates/partial/left-sidebar.html
+++ b/app/templates/partial/left-sidebar.html
@@ -19,7 +19,7 @@
 <div ng-if="authService.isNormalUser()" class="box">
     <h2>Navigation</h2>
     <ul class="sidebar-menu">
-        <li><a href="#/">Home</a></li>
+        <li><a href="#/user/main">Home</a></li>
         <li><a href="#/user/ads">My Ads</a></li>
         <li><a href="#/user/ads/publish">Publish New Ad</a></li>
         <li><a href="#/user/profile">Edit Profile</a></li>
